hard-gists/5540702/run.log
=== Docker Run Log for 5540702 ===
Started at: Mi 29. Okt 15:45:03 CET 2025

[2025-10-29 15:45:04] START: Running container for 5540702
[2025-10-29 15:45:04] SUCCESS: Container 8fb0b8e54f0e3a75ae2ddc47cc4aa0f4528708efdda473c6ccf3c5dbe211f1f9 started for 5540702
=== Container logs for 5540702 ===
  File "/snippet.py", line 26
    print word
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5540702 ===
[2025-10-29 15:45:06] INFO: Container 8fb0b8e54f0e3a75ae2ddc47cc4aa0f4528708efdda473c6ccf3c5dbe211f1f9 has stopped
